--- a/component/navbar.html
+++ b/component/navbar.html
@@ -1,7 +1,7 @@
 <!-- navbar.html -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-info ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html">Nyi Roro Kidul</a>
+      <a class="navbar-brand" href="./index.html">Nyi Roro Kidul</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -11,7 +11,7 @@
             <a class="nav-link active" aria-current="page" href="../index.html">Beranda</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../kisah.html">Kisah</a>
+            <a class="nav-link" href="./kisah.html">Kisah</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../kampanye.html">Kampanye</a>
