--- a/component/navbar.html
+++ b/component/navbar.html
@@ -8,13 +8,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html">Beranda</a>
+            <a class="nav-link active" aria-current="page" href="./index.html">Beranda</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./kisah.html">Kisah</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../kampanye.html">Kampanye</a>
+            <a class="nav-link" href="./kampanye.html">Kampanye</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
