--- a/component/navbar.html
+++ b/component/navbar.html
@@ -17,7 +17,7 @@
             <a class="nav-link" href="./kampanye.html">Kampanye</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            <a class="nav-link" href="./blog.html">Blog</a>
           </li>
         </ul>
       </div>
