--- a/component/footer.html
+++ b/component/footer.html
@@ -1,9 +1,6 @@
-
-
-  <!-- Footer -->
-  <footer id="sticky-footer" class="py-4 bg-primary text-white">
-    <div class="container text-center">
-      <small>Copyright &copy; Your Website</small>
-    </div>
-  </footer>
-</div>
+<!-- Footer -->
+<footer id="sticky-footer" class="py-2  bg-primary text-white fixed-bottom">
+  <div class="container text-center">
+    <small>Copyright &copy; Your Website</small>
+  </div>
+</footer>
