--- a/css/kisah.css
+++ b/css/kisah.css
@@ -1,75 +1,64 @@
-body {
-    margin-top: 20px;
+
+
+
+body{
+    background-color: #74D4FF;
+    scroll-behavior: smooth;
+  }
+
+  #h1-cerita{
+    text-align:center;
+    padding: 15px 0;
+    text-transform:uppercase;
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 2rem;
+    padding-top: 3rem;
+    color: white;
   }
   
-  .card {
-    border: none;
-    height: 400px;
-  }
-  .card-img {
-      border-radius: 0;
-    /* height: 200px; */
-  }
-  
-  .vgr-cards {
-    .card {
-    display: flex;
-    flex-flow: wrap;
-    flex: 100%;
-      margin-bottom: 40px;
-  
-      &:nth-child(even) .card-img-body {
-        order: 2;
+  .shadow-2{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    background-color: white;
+    .object{
+      margin: 30px 15px;
+      img{
+         box-shadow: 15px 15px #74D4FF;
       }
-  
-      &:nth-child(even) .card-body {
-        padding-left: 0;
-        padding-right: 1.25rem; 
+    }
+    &:nth-child(2){
+      .object{
+      margin: 30px 15px;
+      img{
+         box-shadow: 15px 15px blue;
       }
-      
-      @media (max-width: 576px) {
+    }
+    }
+  }
+
+
+  /* Responsif */
+  @media (max-width: 768px) {
+    .col {
+        flex: 0 0 100%;
+    }
+
+    .col img{
+        width: 80%;
+        max-width: 500px; /* Batasi lebar maksimum gambar */
+        height: auto;
+        border: 2px solid #007bff;
+        border-radius: 10px;
         display: block;
-      }
-      
+        /* margin: 0 auto;  */
+        margin-left: 2.5rem;
     }
-  
-    .card-img-body {
-      flex: 1;
-      overflow: hidden;
-      position: relative;
-      
-      @media (max-width: 576px) {
-        width: 100%;
-        height: 400px;
-            margin-bottom: 20px;
-      }
-      
+
+    .col p{
+        font-size: 1rem;
+        text-align: center;
+        margin: 1rem 0 1rem 0;
+        font-family:sans-serif;
     }
-    
-    .card-img {
-      width: 100%;
-      height: auto;
-      position: absolute;
-      margin-left: 50%;
-      transform: translateX(-50%);
-      
-      @media (max-width: 1140px) {
-            margin: 0;
-      transform: none;
-      width: 100%;
-      height: auto;
-      }
-      
-    }
-  
-    .card-body {
-      flex: 2;
-      padding: 0 0 0 1.25rem;
-      
-      @media (max-width: 576px) {
-        padding: 0;
-      }
-      
-    }
-  }
-  
+}
